# untitled

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  TESTING.md  docker-compose.local.yaml  docker-compose.production.yaml  justfile
.envs/.local/: .backend  .postgres
.github/: dependabot.yaml
.github/workflows/: ci-backend.yaml  ci-frontend.yaml  ci.yml
backend/: .dockerignore  .gitignore  manage.py  pyproject.toml
backend/apps/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
backend/apps/locations/: admin.py  apps.py  models.py  tasks.py
backend/apps/locations/api/: schema.py  views.py
backend/apps/locations/migrations/: 0001_initial.py
backend/apps/organizations/: admin.py  apps.py  authentication.py  context_processors.py  enums.py  middleware.py  mixins.py  models.py  permissions.py  tasks.py  utils.py  views.py
backend/apps/organizations/api/: schema.py  views.py
backend/apps/organizations/management/commands/: seed.py
backend/apps/organizations/migrations/: 0001_initial.py  0002_membership_is_default.py
backend/apps/users/: apps.py  forms.py  models.py
backend/apps/users/api/: schema.py  views.py
backend/apps/users/migrations/: 0001_initial.py
backend/apps/utils/: models.py
backend/config/: api.py  asgi.py  celery_app.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py  production.py  test.py
backend/fixtures/: organizations.json  schema_vkojrfv6lz_0006.json  schema_z0207t1shm_3579.json  users.json
backend/templates/admin/: base_site.html
backend/tests/: conftest.py
backend/tests/locations/: factories.py
backend/tests/locations/api/: test_views.py
backend/tests/organizations/: factories.py  test_models.py
backend/tests/organizations/api/: test_views.py
backend/tests/users/: factories.py  test_admin.py  test_forms.py  test_managers.py  test_tasks.py
backend/tests/users/api/: test_urls.py  test_views.py
compose/local/backend/: Dockerfile  start-flower
compose/local/frontend/: Dockerfile
compose/production/backend/: Dockerfile  start  start-flower
compose/production/frontend/: Dockerfile
compose/production/traefik/: Dockerfile  traefik.yaml
docs/: architecture.md  celery-tasks.md  considerations.md  deployment.md  development.md  migrations.md  organization-management.md  permissions.md  seed.md  testing.md
frontend/: .gitignore  package.json  pnpm-lock.yaml
